# Peraviz

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  README_gobos.md  SECURITY.md  icon.svg.import  peraviz.gdextension  peraviz.gdextension.uid  peraviz_tree.md  project.godot  test.gd  test.gd.uid  test.tscn
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  (+1 more)
.godot/: extension_list.cfg  global_script_class_cache.cfg
docs/: BASELINE_MVR_RENDER.md  BEAM_APPEARANCE_BASELINE.md  BEAM_GEOMETRY_AND_VISUAL_LENGTH.md  BEAM_RENDERING_MODES.md  COORDINATE_SYSTEM.md  DAY_NIGHT_ENVIRONMENT.md  DMX_CAPABILITY_MATRIX.md  ENVIRONMENT_TUNING.md  GDTF_GOBO_CONTROL.md  LIGHT_INTENSITY_INTERPRETATION.md  MVR_XCHANGE.md  NATIVE_BUILD.md  PERASTAGE_RUNTIME_TABLES.md  UI_ARCHITECTURE.md  UI_GROWTH_CHECKLIST.md  USED_LIBS.md  WINDOWS_EXPORT.md  adr-gdtf-parser-ownership.md  architecture.md  batched-beam-rendering-plan.md  dmx-visual-runtime.md  gdtf-runtime-architecture.md  gdtf-support-matrix.md  godot_performance_guidelines.md  native-color-mvp-consolidation.md  peraviz-perastage-gdtf-contract.md  peraviz-project-architecture.md  pvz-project-format.md  release-notes-draft.md  runtime-storage-policy.md  uniform-physical-color-pipeline.md  versioning-policy.md
native/: .gdignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  vcpkg.json
native/cmake/: check_windows_dependencies.cmake
native/src/: asset_cache.cpp  asset_cache.h  coordinate_mapper.cpp  coordinate_mapper.h  entry.cpp  gdtf_scene_builder.cpp  gdtf_scene_builder.h  gobo_vectorizer.cpp  gobo_vectorizer.h  hello_world.cpp  hello_world.h  matrixutils.h  mesh_3ds_loader.cpp  mesh_3ds_loader.h  mvr_scene_loader.cpp  mvr_scene_loader.h  peraviz_build_version.h.in  peraviz_debug_runtime.cpp  peraviz_debug_runtime.h  peraviz_dmx_receiver.cpp  peraviz_dmx_receiver.h  peraviz_loader.cpp  peraviz_loader.h  peraviz_mvr_xchange_client.cpp  peraviz_mvr_xchange_client.h  peraviz_version.h  register_types.cpp  register_types.h  runtime_storage.cpp  runtime_storage.h  scene_model.h  types.h
native/src/archive/: zip_archive.cpp  zip_archive.h
native/src/dmx/: artnet_dmx_parser.cpp  artnet_dmx_parser.h  artnet_receiver.cpp  artnet_receiver.h  dmx_platform.cpp  dmx_platform.h  dmx_universe_cache.cpp  dmx_universe_cache.h  dmx_universe_decoder.cpp  dmx_universe_decoder.h  fixture_dmx_binding.cpp  fixture_dmx_binding.h  gdtf_archive_resource_reader.cpp  gdtf_archive_resource_reader.h  gdtf_attribute_classifier.cpp  gdtf_attribute_classifier.h  gdtf_color_cie.cpp  gdtf_color_cie.h  gdtf_control_offsets_resolver.cpp  gdtf_control_offsets_resolver.h  gdtf_dmx_inspector.cpp  gdtf_dmx_inspector.h  gdtf_gobo_catalog.cpp  gdtf_gobo_catalog.h  gdtf_physical_ranges.cpp  gdtf_physical_ranges.h  gdtf_wheel_catalog.cpp  gdtf_wheel_catalog.h  gdtf_xml_reader.cpp  gdtf_xml_reader.h  udp_socket.cpp  udp_socket.h
native/src/gdtf_runtime/: compiled_gdtf_fixture.cpp  compiled_gdtf_fixture.h  gdtf_geometry_identity.cpp  gdtf_geometry_identity.h  runtime_scene_compiler.cpp  runtime_scene_compiler.h
native/src/gdtf_runtime/registry/: official_attributes.json
native/src/gui/gdtf/: gdtf_resource_bitmap_cache.cpp  gdtf_resource_bitmap_cache.h
native/src/mvrxchange/: mvr_xchange_discovery.cpp  mvr_xchange_discovery.h  mvr_xchange_local_station.cpp  mvr_xchange_local_station.h  mvr_xchange_packet.cpp  mvr_xchange_packet.h  mvr_xchange_service_name.cpp  mvr_xchange_service_name.h  mvr_xchange_transfer.cpp  mvr_xchange_transfer.h  mvr_xchange_types.h
native/src/runtime/: color_science.cpp  color_science.h  peraviz_visual_runtime.cpp  peraviz_visual_runtime.h  peraviz_visual_runtime_godot.cpp  peraviz_visual_runtime_godot.h  visual_frame_buffers.h  visual_frame_schema.cpp  visual_frame_schema.h  visual_runtime_types.h  wheel_runtime_core.cpp  wheel_runtime_core.h
native/src/table_model/: perastage_table_schemas.cpp  perastage_table_schemas.h  runtime_table.cpp  runtime_table.h  runtime_table_schema.cpp  runtime_table_schema.h
native/tests/: dmx_artnet_flow_test.cpp  fixture_dmx_binding_e2e_test.cpp  gdtf_attribute_classifier_test.cpp  gdtf_runtime_schema_test.cpp  gdtf_wheel_attribute_inspector_test.cpp  mvr_xchange_service_name_test.cpp  runtime_storage_test.cpp  runtime_table_model_test.cpp  visual_runtime_core_test.cpp
native/tests/data/: golden_fixture_description.xml
scripts/: asset_runtime_cache.gd  asset_runtime_cache.gd.uid  beam_aperture_measurement_service.gd  beam_appearance_profile.gd  beam_geometry_calculator.gd  beam_optics_controller.gd  beam_optics_controller.gd.uid  day_night_environment_controller.gd  day_night_environment_controller.gd.uid  dmx_capability_control_reader.gd  dmx_capability_control_reader.gd.uid  dmx_capability_normalizer.gd  dmx_capability_normalizer.gd.uid  dmx_fixture_runtime.gd  dmx_fixture_runtime.gd.uid  dmx_gobo_controls_resolver.gd  dmx_gobo_range_resolver.gd  dmx_gobo_range_resolver.gd.uid  dmx_monitor_window.gd  dmx_monitor_window.gd.uid  editor_camera.gd  editor_camera.gd.uid  fixture_gobo_projector.gd  fixture_gobo_projector.gd.uid  fog_volume_gobo_beam_controller.gd  fog_volume_gobo_beam_controller.gd.uid  gdtf_mesh_diagnostics.gd.uid  gobo_shake_limits.gd  gobo_shake_limits.gd.uid  load_scene.gd  load_scene.gd.uid  mesh_face_flip_utils.gd.uid  mesh_runtime_mirror_fix.gd.uid  mesh_winding_utils.gd.uid  scene_registry.gd  scene_registry.gd.uid  visual_settings_window.gd  visual_settings_window.gd.uid
tests/: check_gdtf_attribute_registry.sh  check_gdtf_component_runtime_guardrails.sh  check_gdtf_editor_checkpoint08e3_wheel_attribute_inspector.sh  check_godot_boundary_lightweight.sh  check_live_gobo_controls_resolver.sh  check_live_gobo_visual_path.sh  check_live_visual_frame_guardrails.sh  check_no_large_files.sh  check_no_legacy_live_decoder_registration.sh  check_peraviz_tree_modules.sh  check_runtime_architecture.sh  check_visual_frame_sectioned_contract.sh  check_visual_frame_stride_contract.sh
(+107 files in other folders)
